Implementação de testes unitários.